[metadata]
name = MMF-SV
version = 1.0.1
author = Zeyu Xia
author_email = xiazeyu12@nudt.edu.cn
description = A fast structural variation caller for long-read sequencing data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fritzsedlazeck/Sniffles
project_urls =
    Bug Tracker = https://github.com/fritzsedlazeck/Sniffles/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires:
    pysam>=0.21.0
    edlib>=1.3.9
    psutil>=5.9.4
scripts:
    src/mmfsv/mmfsv

[options.packages.find]
where = src
